<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">Zecure</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Jessica Joshua Mallan</string>
    <string name="nav_header_subtitle">tennwhiterose@gmail.com/+2348148355580</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Dashboard</string>
    <string name="menu_about">About</string>
    <string name="menu_share">Share</string>
    <string name="toolbar_title">Zecure</string>
    <string name="about_p">
        This is the final year project of <b>Jessica Joshua Mallan</b>, for completion of <b>HND</b> program, class of <b>2021</b>,
        <b>Federal Polytechnic Bauchi</b>.
    </string>
    <string name="about_p2">
        <b>Developed by:</b>
    </string>
    <string name="about_p22">
        <i>EasyTech</i>
    </string>
    <string name="about_p23">
        <b>Contact us:</b>
    </string>
    <string name="about_p24">
        <i>tennwhiterose@gmail.com/</i>
    </string>
    <string name="about_p25">
        <i>+2348148355580</i>
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>